leaderboard and profile stop

--- a/client/js/modules/menus/leaderboard/Leaderboard.pug
+++ b/client/js/modules/menus/leaderboard/Leaderboard.pug
@@ -9,3 +9,6 @@ table(class='leaderTable')
             tr
                 th(class='contents') #{player.nickname}
                 th(class='contents') #{player.score}
+
+
+button(id="scoreboardNext") next
