heroku games, leaderboard working

--- a/client/js/modules/menus/leaderboard/Leaderboard.pug
+++ b/client/js/modules/menus/leaderboard/Leaderboard.pug
@@ -7,7 +7,7 @@ table(class='leaderTable')
     tbody
         each player in players
             tr
-                //th(class='contents') #{player.nickname}
+                //th(class='contents') #{player.login}
                 th(class='contents') #{player.login}
                 th(class='contents') #{player.score}
 
