working menus, unworking register

--- a/client/data/modules/views/RegisterMenuView/RegisterMenuView.pug
+++ b/client/data/modules/views/RegisterMenuView/RegisterMenuView.pug
@@ -5,18 +5,18 @@ form.loginForm(name="registerForm")
         tbody
             tr
                 th
-                    label.info Mail:
+                    label.info Email:
                 th
-                    input(type="text" value="" name="registerMailInput").flatLightGray
+                    input(type="text" value="" name="registerEmailInput").flatLightGray
                 th
-                    label.error(id="registerMailError")
+                    label.error(id="registerEmailError")
             tr
                 th
-                    label.info Nickname:
+                    label.info Login:
                 th
-                    input(type="text" value="" name="registerNicknameInput").flatLightGray
+                    input(type="text" value="" name="registerLoginInput").flatLightGray
                 th
-                    label.error(id="registerNicknameError")
+                    label.error(id="registerLoginError")
             tr
                 th
                     label.info Password:
