--- a/client/Modules/Views/ScoreboardView/ScoreboardView.pug
+++ b/client/Modules/Views/ScoreboardView/ScoreboardView.pug
@@ -3,15 +3,16 @@ include ../BaseMenuView/BaseMenuHeader.pug
 form.scoreboardForm(name="scoreboardForm")
     table.leaderTable
         thead
-            tr
-                th.tableHeader Name
-                th.tableHeader Score
+            tr.tr
+                th.tableHeader.th Name
+                th.tableHeader.th Score
 
         tbody
             each player in players
-                tr
-                    th.contents #{player.login}
-                    th.contents #{player.score}
-    div.button(id = "scoreboardNext" data-id="scoreboardNext") Next
+                tr.tr
+                    td.contents.td #{player.login}
+                    td.contents.td #{player.score}
+
+button(data-id="scoreboardNext") Next
 
 include ../BaseMenuView/BaseMenuFoot.pug
