--- a/client/Modules/Views/UserProfileBlockView/UserProfileBlock.css
+++ b/client/Modules/Views/UserProfileBlockView/UserProfileBlock.css
@@ -2,9 +2,9 @@
 {
     width: 200px;
     height: 80px;
-    border: 1px solid black;
+    border: 1px solid white;
     position: fixed;
-    left: 10px;
+    right: 10px;
     top: 10px;
     align-content: center;
     text-align: center;
