--- a/client/CSS/Styles.css
+++ b/client/CSS/Styles.css
@@ -4,5 +4,9 @@ body
     padding: 0;
     color: white;
     background-image: url("/Resources/Textures/background-sea.png");
+    background-color: #fef65b;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
 }
 
