--- a/client/Modules/Views/UserProfileBlockView/UserProfileBlockView.pug
+++ b/client/Modules/Views/UserProfileBlockView/UserProfileBlockView.pug
@@ -1,17 +1,17 @@
 if loggedIn
-    h3.userName #{name}
+    h3.userName #{email}
 else
-    h3.userName Not logged in
+    h3.userName Please login
 
 table
     tbody
         if loggedIn
             tr.alignCenter
                 th(colspan=2).alignCenter
-                    div.smallButton.alignCenter(id="logout") Logout
+                    div.smallButton.rightMoveLogout(id="logout") Logout
         else
             tr.alignCenter
                 th.alignCenter
-                    div.smallButton.alignCenter(id="login") Login
+                    div.smallButton.alignButtons(id="login") Login
                 th.alignCenter
-                    div.smallButton.alignCenter(id="register") Register
+                    div.smallButton.alignButtons(id="register") Register
