--- a/client/Game/CSS/GameStyle.css
+++ b/client/Game/CSS/GameStyle.css
@@ -10,7 +10,7 @@
 
 .table_field td
 {
-    border: 1px solid white; /*#1d2d3b;*/
+    border-radius: 20px;
     padding: 5px;
     text-align: center;
     width: 20px;
@@ -19,6 +19,7 @@
 
 .table_field
 {
+    border-radius: 20px;
     margin: auto;
     position: absolute;
     top: 60%;
@@ -88,67 +89,68 @@
 
 .ship
 {
-    border: 3px solid #1d2d3b;
+    /*border: 3px solid #1d2d3b;*/
     padding: 5px;
     width: 20px;
     height: 20px;
-    background-color: green;
+    background-color: #4f8e4f;
     color: transparent;
 }
 
 .shipX1
 {
-    border: 3px solid #1d2d3b;
+    border-radius: 20px;
+    /*border: 3px solid #1d2d3b;*/
     padding: 5px;
     width: 20px;
     height: 20px;
-    background-color: green;
+    background-color: #4f8e4f;
     color: transparent;
 }
 
 .shipX2
 {
-    border: 3px solid #1d2d3b;
+    border-radius: 20px;
+    /*border: 3px solid #1d2d3b;*/
     padding: 5px;
     width: 56px;
     height: 20px;
-    background-color: green;
+    background-color: #4f8e4f;
     color: transparent;
 }
 
 .shipX3
 {
-    border: 3px solid #1d2d3b;
+    border-radius: 20px;
+    /*border: 3px solid #1d2d3b;*/
     padding: 5px;
     width: 88px;
     height: 20px;
-    background-color: green;
+    background-color: #4f8e4f;
     color: transparent;
 }
 
 .shipX4
 {
-    border: 3px solid #1d2d3b;
+    border-radius: 20px;
+    /*border: 3px solid #1d2d3b;*/
     padding: 5px;
     width: 121px;
     height: 20px;
-    background-color: green;
+    background-color: #4f8e4f;
     color: transparent;
 }
-
-
-
-
-
 
 .field_ship
 {
     color: white;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .my_field td
 {
-    border: 1px solid white;
+
     padding: 5px;
     text-align: center;
     width: 20px;
@@ -157,7 +159,7 @@
 
 .enemy_field td
 {
-    border: 1px solid white;
+
     padding: 5px;
     text-align: center;
     width: 20px;
@@ -204,7 +206,7 @@
 
 .shipOK
 {
-    background-color: green;
+    background-color: #4f8e4f;
 }
 
 .Fire
